--- a/stilus.css
+++ b/stilus.css
@@ -14,6 +14,7 @@ header{
 
 nav{
     border: 1px solid rgb(58, 77, 128);
+    background-color: #a2c1e4;
 }
 
 aside{
@@ -22,6 +23,7 @@ aside{
     display: grid;
     grid-template-columns: 1fr 1fr;
     border: 1px solid rgb(58, 77, 128);
+    background-color: #a2c1e4;
 }
 
 article{
@@ -29,6 +31,7 @@ article{
     width: auto;
     border: 1px solid rgb(58, 77, 128);
     display: inline;
+    background-color: #a2c1e4;
 }
 
 footer{
@@ -36,6 +39,7 @@ footer{
     width: 100%;
     clear: both;
     text-align: center;
+    background-color: #a2c1e4;
 }
 
   
@@ -46,6 +50,7 @@ h1 {
 nav ul {
     list-style-type: none;
     padding: 0;
+    ;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 20px;
