--- a/stilus.css
+++ b/stilus.css
@@ -3,7 +3,7 @@ body{
     width: 1000px;
     margin: auto;
     padding: auto;
-    background-color: #a2c1e4;
+    background-color: white;
 }
 
 header{
