--- a/stilus.css
+++ b/stilus.css
@@ -4,6 +4,7 @@ body{
     margin: auto;
     padding: auto;
     background-color: white;
+    border: 1px solid rgb(58, 77, 128)
 }
 
 header{
@@ -29,9 +30,6 @@ aside{
 article{
     text-align: center;
     width: auto;
-    border: 1px solid rgb(58, 77, 128);
-    display: inline;
-    background-color: #a2c1e4;
 }
 
 footer{
