--- a/stilus.css
+++ b/stilus.css
@@ -6,19 +6,31 @@ body{
     background-color: white;
     border: 1px solid rgb(58, 77, 128)
 }
+main{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-areas: 
+    "h h h h"
+    "n n n n"
+    "ar ar ar ar"
+    "f f f f";
+}
 
 header{
+    grid-area: h;
     border: 1px solid rgb(58, 77, 128);
     text-align: center;
     background-color: #5382b4;
 }
 
 nav{
+    grid-area: n;
     border: 1px solid rgb(58, 77, 128);
     background-color: #a2c1e4;
 }
 
 aside{
+    grid-area: as;
     width: 40%;
     float: right;
     display: grid;
@@ -28,11 +40,13 @@ aside{
 }
 
 article{
+    grid-area: ar;
     text-align: center;
     width: auto;
 }
 
 footer{
+    grid-area: f;
     border: 1px solid rgb(58, 77, 128);
     width: 100%;
     clear: both;
