--- a/stilus.css
+++ b/stilus.css
@@ -121,7 +121,10 @@ td{
     padding: 10px;
     border: 1px solid rgb(58, 77, 12)
 }
-
+.center{
+    margin-left: auto;
+    margin-right: auto;
+}
 #vivas{
     main{
         grid-template-areas: 
