--- a/stilus.css
+++ b/stilus.css
@@ -4,7 +4,8 @@ body{
     margin: auto;
     padding: auto;
     background-color: white;
-    border: 1px solid rgb(58, 77, 128)
+    border: 1px solid rgb(58, 77, 128);
+    max-width: 1000px;
 }
 main{
     display: grid;
@@ -59,6 +60,7 @@ h1 {
 nav ul {
     list-style-type: none;
     padding: 0;
+    padding-right: 20px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 20px;
@@ -74,7 +76,6 @@ nav a {
 nav li {
     text-align: center;
     border: 1px solid rgb(58, 77, 128);
-    padding: 10px;
     background-color: rgb(58, 77, 128);
   }
   
@@ -99,7 +100,7 @@ li a {
     padding-right: 70px;
 }
 
-table {
+.center table {
     align-items: center;
     text-align: center;
     margin: 10px;
@@ -107,13 +108,13 @@ table {
     border: 1px solid rgb(58, 77, 12);
 }
 
-th{
+.center th{
     margin: 10px;
     padding: 10px;
     border: 1px solid rgb(58, 77, 12)
 }
 
-td{
+.center td{
     margin: 10px;
     padding: 10px;
     border: 1px solid rgb(58, 77, 12)
@@ -163,8 +164,14 @@ td{
     nav ul {
         list-style-type: none;
         padding: 0;
+        padding-right: 20px;
         display: grid;
         grid-template-columns: 1fr;
         gap: 20px;
       }
+}
+
+ul {
+    text-align: left;
+    margin-left: 30px;
 }
